<resources>
    <string name="app_name">UI Lab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--   <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>-->
    <string name="nav_header_title">TCSS 450</string>
    <string name="nav_header_subtitle">Autumn 2019</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <!-- <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>-->
    <string name="menu_textView">Text View</string>
    <string name="menu_editText">Edit Text</string>
    <string name="menu_checkBoxes">Check Boxes</string>
    <string name="menu_autoComplete">Auto Complete</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view_ex1">Hello All</string>
    <string name="text_view_ex_phone">253 123 4567</string>
    <string name="text_view_ex_email">myunetid@uw.edu</string>

    <string name="edit_view_hint">type something!</string>

    <string name="radioYes">Yes</string>
    <string name="radioNo">No</string>
    <string name="toppingMeat">meat</string>
    <string name="toppingCheese">cheese</string>
    <string name="toppingVegitables">vegetables</string>
    <string name="toppingSauce">sauce</string>

    <string name="auto_complete_hint">Choose a color</string>
    <string-array name="auto_complete_colors">
        <item>red</item>
        <item>green</item>
        <item>orange</item>
        <item>blue</item>
        <item>purple</item>
        <item>black</item>
        <item>yellow</item>
        <item>cyan</item>
        <item>magenta</item>
    </string-array>

    <string name="key_student_view">this is a key the text doesn’t matter</string>
</resources>
